; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_expr_cmp.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_expr_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@token = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @parse_expr_cmp() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32* (...) @parse_expr_add()
  store i32* %4, i32** %1, align 8
  br label %5

5:                                                ; preds = %8, %0
  %6 = call i64 (...) @is_cmp_op()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %5
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 1), align 4
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 0), align 4
  store i32 %10, i32* %3, align 4
  %11 = call i32 (...) @next_token()
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32*, i32** %1, align 8
  %15 = call i32* (...) @parse_expr_add()
  %16 = call i32* @new_expr_binary(i32 %12, i32 %13, i32* %14, i32* %15)
  store i32* %16, i32** %1, align 8
  br label %5

17:                                               ; preds = %5
  %18 = load i32*, i32** %1, align 8
  ret i32* %18
}

declare dso_local i32* @parse_expr_add(...) #1

declare dso_local i64 @is_cmp_op(...) #1

declare dso_local i32 @next_token(...) #1

declare dso_local i32* @new_expr_binary(i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
